# llama-pdf

./: .gitignore  README.md  cli.sh  cli_bat.bat  cli_unix.sh  init_unix.sh  init_win.bat  init_windows.bat  server_unix.sh  server_win.bat  unix_setup.sh  win_setup.bat
llama-pdf/cli/: Cargo.toml
llama-pdf/cli/src/: main.rs
pdf-chat/cli/: Cargo.toml
pdf-chat/server/: inference.py  requirements.txt
pdf_chat/cli/src/: args.rs  main.rs
pdf_chat/server/: inference.py
