[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
structopt = "0.3.26"
pdf-extract = "0.6.5"
regex = "1.5"
colored = "2.0.4"
